# bolster

./: .gitignore  .gitmodules  CMakeLists.txt  camera.cpp  camera.hpp  compile_commands.json  dstack.hpp  dstack_test.cpp  main.cpp  main.hpp  mesh.hpp  utils.hpp  vk_engine.cpp  vk_engine.hpp  vk_types.hpp  vk_utils.cpp  vk_utils.hpp
data/: level1.json
includes/: audio.hpp  bs_dialogue_component.hpp  bs_entity.hpp  bs_graphics_component.hpp  bs_types.hpp  camera.hpp  end_state.hpp  entity_manager.hpp  game_state.hpp  game_state_manager.hpp  main.hpp  mesh.hpp  movement_component.hpp  rhythmic_state.hpp  start_state.hpp  targeting_component.hpp  utils.hpp  vk_engine.hpp  vk_init.hpp  vk_initializers.hpp  vk_types.hpp
shaders/: comp.spv  compile.bat  frag.spv  shader.comp  shader.frag  shader.vert  shadowmap.vert  shadowmap_vert.spv  skybox.frag  skybox.vert  skybox_frag.spv  skybox_vert.spv  vert.spv
src/: audio.cpp  bs_dialogue_component.cpp  bs_entity.cpp  bs_graphics_component.cpp  camera.cpp  dstack.cpp  end_state.cpp  entity_manager.cpp  game_state_manager.cpp  main.cpp  movement_component.cpp  rhythmic_state.cpp  start_state.cpp  targeting_component.cpp  vk_engine.cpp  vk_init.cpp  vk_utils.cpp
